objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager_Email__c</fullName>
        <label>Hiring Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon_image__c</fullName>
        <formula>CASE( TEXT(Status__c), 
&apos;New Position&apos;,  IMAGE(&quot;/resource/GreenTick&quot;, &quot;Green&quot;, 28, 24), 
&apos;Closed - Canceled&apos;,  IMAGE(&quot;/resource/RedTick&quot;, &quot;Red&quot;, 28, 24), 
&apos;Closed - Filled&apos;,  IMAGE(&quot;/resource/RedTick&quot;, &quot;Red&quot;, 28, 24),
&apos;Closed - Not Approved&apos;,  IMAGE(&quot;/resource/RedTick&quot;, &quot;Red&quot;, 28, 24),
&apos;No Image Available&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>NewYork,NY</fullName>
                </value>
                <value>
                    <fullName>San Francisco, CA</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>New Position</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Open_Date__c  &gt;=  Close_Date__c</errorConditionFormula>
        <errorMessage>If open date is equals or greater than closed date change the values in date field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND
  (ISBLANK(Close_Date__c),
OR(ISPICKVAL(Status__c, &apos;Closed - Canceled&apos;) || 
   ISPICKVAL(Status__c, &apos;Closed - Filled&apos;)  || 
   ISPICKVAL(Status__c, &apos;Closed - Not Approved&apos;)) )</errorConditionFormula>
        <errorMessage>If the status is closed cancelled, closed date mandatory in terms creating record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_Max</fullName>
        <active>true</active>
        <errorConditionFormula>Max_Pay__c &gt;= 1000000</errorConditionFormula>
        <errorMessage>Max Pay cannot be more than 1 million</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_terms</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c  &gt;=  Max_Pay__c</errorConditionFormula>
        <errorMessage>Min pay cannot be more than Max pay. Please the the data given</errorMessage>
    </validationRules>
</CustomObject>